<resources>
    <string name="app_name">Stolen Art Finder</string>
    <string name="title_search">Search</string>
    <string name="title_report_stolen">Report stolen</string>
    <string name="title_notifications">Notifications</string>

    <string name="instructions">Take a picture of your painting or pick one from your gallery.</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="upload_from_gallery">Upload from gallery</string>
    <string name="search">Search!</string>

    <string name="painting_name">Painting name</string>
    <string name="painting_name_hint">Mona lisa</string>
    <string name="report_button">Report</string>
    <string name="report_instructions">To upload a new painting to out database, please fill in as much information as possible.</string>
    <string name="stolen_painting_description">Stolen painting to be reported</string>
    <string name="title_report_stolen_fragment">Report new stolen painting</string>
    <string name="found_from_server">The painting we found</string>

    <string name="image_to_search_description">Is this painting stolen?</string>

    <string name="uploading_progress_label">Uploading your painting…</string>
    <string name="downloading_progress_label">Downloading the results…</string>
    <string name="painting_is_stolen">This painting probably has been stolen!</string>
    <string name="png">Required permission were not granted. Now add them manually in the settings, or quit using the app.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>